samples/_failures_safe/1761731107_fb4c90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfa90d02.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_bfa90d02.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
